<resources>
    <string name="app_name">Happy Learning English</string>
    <string name="action_settings">Thông tin</string>
    <string name="title_activity_main">Happy Learning English</string>
    <string name="title_here">Title here</string>
    <string name="description_here">Description here</string>
    <string name="start_recording">BẮT ĐẦU GHI ÂM</string>
    <string name="stop_recording">DỪNG VÀ LƯU GHI ÂM</string>
    <string name="title_voicerecord_act">Record your voice</string>
    <string name="title_record_player_act">Play your podcasts and records</string>
    <string name="reload_page">Tải lại</string>
    <string name="stop_page">Dừng tải</string>
    <string name="read_news">Đọc tin tức mới nhất bằng Tiếng Anh</string>
    <string name="click_to_see">Chọn để xem</string>
    <string name="listen_podcast">Nghe những podcast thú vị trên mạng</string>
    <string name="click_to_listen">Chọn để nghe</string>
    <string name="title_activity_main_settings">Settings</string>
    <string name="load_failed">Cannot load data :(</string>
    <string name="confirm">Xác nhận</string>
    <string name="copied">Copied to clipboard</string>
    <string name="easy_lv">Mức độ Nhập môn</string>
    <string name="advance_lv">Mức độ Nâng cao</string>
    <string name="medium_lv">Mức độ trung bình</string>
    <string name="cancel">BỎ QUA</string>
    <string name="exit">THOÁT</string>
    <string name="sure_to_quit">Bạn muốn thoát khỏi phần mềm?</string>
    <string name="start_here">Chọn vào đây để bắt đầu</string>
    <string name="about">Thông tin</string>
    <string name="review">Xem lại trắc nghiệm</string>
    <string name="skipped">Bỏ qua</string>
    <string name="wrong">Sai</string>
    <string name="correct">Đúng</string>
    <string name="total">Tổng số</string>
    <string name="test_result">Kết quả trắc nghiệm</string>
    <string name="listen_manage">Nghe và quản lý các bản ghi âm</string>
    <string name="click_listen">Chọn để nghe</string>
    <string name="hold_delete">Giữ để xóa bản ghi</string>
    <string name="delete_record">Xóa bản ghi âm này?</string>
    <string name="delete">Xóa</string>
    <string name="cannot_error">Không thể lưu thông báo lỗi</string>
</resources>
