<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test_result_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/test_result"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/result_percent_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_centerHorizontal="true"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorAccent"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/result_comment_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_percent_tv"
            android:layout_centerHorizontal="true"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_comment_tv"
            android:layout_toLeftOf="@+id/result_comment_tv"
            android:layout_toStartOf="@+id/result_comment_tv"
            android:text="@string/total"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/result_total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_comment_tv"
            android:layout_toEndOf="@+id/result_comment_tv"
            android:layout_toRightOf="@+id/result_comment_tv"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView11"
            android:layout_alignRight="@+id/textView11"
            android:layout_below="@+id/textView11"
            android:text="@string/correct"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/result_correct_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_total_tv"
            android:layout_toEndOf="@+id/result_comment_tv"
            android:layout_toRightOf="@+id/result_comment_tv"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView10"
            android:layout_alignRight="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:text="@string/wrong"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/result_mistake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/result_correct_tv"
            android:layout_alignStart="@+id/result_correct_tv"
            android:layout_alignTop="@+id/textView12"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView12"
            android:layout_alignRight="@+id/textView12"
            android:layout_below="@+id/textView12"
            android:text="@string/skipped"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/result_skip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/result_mistake"
            android:layout_alignStart="@+id/result_mistake"
            android:layout_below="@+id/result_mistake"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <Button
        android:id="@+id/turn_back_bt"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/review" />

</RelativeLayout>