<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.VoiceRecordingActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/record_title_ed"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">

        <ImageButton
            android:id="@+id/record_start_stop_bt"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:background="?android:selectableItemBackground"
            android:onClick="switchRecording"
            android:scaleType="fitXY"
            android:src="@drawable/start_record" />

        <TextView
            android:id="@+id/record_start_stop_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/record_start_stop_bt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/start_recording"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/record_title_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/record_desc_ed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/title_here"
        android:singleLine="true" />

    <EditText
        android:id="@+id/record_desc_ed"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/description_here"
        android:text="None"/>

</RelativeLayout>
