<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lv_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/easy_lv_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:background="@android:color/holo_green_light"
            android:onClick="onClick"
            android:text="@string/easy_lv"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/medium_lv_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/easy_lv_bt"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:background="@android:color/holo_orange_light"
            android:onClick="onClick"
            android:text="@string/medium_lv"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/advance_lv_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/medium_lv_bt"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:background="@android:color/holo_orange_dark"
            android:onClick="onClick"
            android:text="@string/advance_lv"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="Lựa chọn độ khó của bài test"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>